<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmarDatos"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_confirmar_datos"
            android:textAlignment="center"
            android:textSize="@dimen/font_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTituloNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_nombre"
            android:layout_marginTop="@dimen/margen_top"
            />

        <TextView
            android:id="@+id/tvNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_nombre"
            android:textSize="@dimen/font_subtitle"
            />

        <TextView
            android:id="@+id/tvTituloFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_fecha_n"
            android:layout_marginTop="@dimen/margen_top"
            />

        <TextView
            android:id="@+id/tvFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_fecha"
            android:textSize="@dimen/font_subtitle"
            />

        <TextView
            android:id="@+id/tvTituloTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_telefono"
            android:layout_marginTop="@dimen/margen_top"
            />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_telefono"
            android:textSize="@dimen/font_subtitle"
            />

        <TextView
            android:id="@+id/tvTituloEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_email"
            android:layout_marginTop="@dimen/margen_top"
            />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_email"
            android:textSize="@dimen/font_subtitle"
            />

        <TextView
            android:id="@+id/tvTituloDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_descripcion"
            android:layout_marginTop="@dimen/margen_top"
            />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_descripcion"
            android:textSize="@dimen/font_subtitle"
            />

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_editar"
            android:theme="@style/MiBotonEstilo"
            android:layout_marginTop="@dimen/margen_top"
            android:onClick="editarDatos"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>